<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo_app"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo_activity1"
            android:gravity="center"
            android:layout_marginBottom="24dp"
            style="@style/TituloPrincipal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_nombre_usuario"
            android:layout_marginBottom="8dp"
            style="@style/EtiquetaTexto" />

        <EditText
            android:id="@+id/etNombreUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_nombre_usuario"
            android:inputType="textPersonName"
            android:layout_marginBottom="16dp"
            style="@style/CampoTexto" />

        <Button
            android:id="@+id/btnContinuar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/boton_saludar_continuar"
            android:layout_marginBottom="16dp"
            style="@style/BotonPrincipal" />

        <EditText
            android:id="@+id/etResultadoSaludo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_nombre_usuario"
            android:focusable="false"
            android:clickable="false"
            android:cursorVisible="false"
            android:inputType="none"
            style="@style/CampoTexto" />

    </LinearLayout>
</ScrollView>